# film-library-manager

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
docs/: _quarto.yml  index.qmd
include/: LoginView.h  mainwindow.h
src/: LoginView.cpp  loginview.ui  main.cpp  mainwindow.cpp
